methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:5: error: '=' expected but '(' found.
  avance() 
        ^PatternPicture:7: error: illegal start of simple expression
}
^