methods.picture.PatternPicture.scala.code
override def run() {
}

def faireMoRV():
	avance()